fixed layout issue on empty containers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,9 @@ main #toDo, main #done, main #doing {
   -webkit-backdrop-filter: blur(3px);
   text-align: center;
 }
+main #toDo .dragDiv, main #done .dragDiv, main #doing .dragDiv {
+  opacity: 0;
+}
 @media screen and (max-width: 768px) {
   main #toDo, main #done, main #doing {
     width: 100%;
@@ -126,6 +129,9 @@ main.darkMode {
 main.darkMode #toDo, main.darkMode #done, main.darkMode #doing {
   background-color: #102130;
   box-shadow: 0px 0px 5px #b4b4b5;
+}
+main.darkMode #toDo .dragDiv, main.darkMode #done .dragDiv, main.darkMode #doing .dragDiv {
+  opacity: 0;
 }
 main.darkMode #toDo .task, main.darkMode #done .task, main.darkMode #doing .task {
   background-color: #061424;
